Fix pokeball which was overlapping sidebar

--- a/src/scss/_c.card.scss
+++ b/src/scss/_c.card.scss
@@ -44,7 +44,7 @@ $_image-width: 35%;
 
 		border-radius: 50%;
 		background-color: #fff;
-		box-shadow: 0 5px 13px rgba(0, 0, 0, .25);
+		box-shadow: $box-shadow;
 
 		transform: translate(-60%, -50%);
 	}
