--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -36,6 +36,10 @@ $color-steel: #a0a0c0;
 $base-line: 8px;
 
 
+// Box shadows
+$box-shadow: 0 5px 13px rgba(0, 0, 0, .25);
+
+
 // Sidebar
 $hamburger-width: 50px;
 $sidebar-width: 280px;
